fix: logout dropdown alignment

--- a/todo-front/src/Components/Header/styles.module.scss
+++ b/todo-front/src/Components/Header/styles.module.scss
@@ -16,12 +16,15 @@
   }
 }
 .ActionGroup {
+  position: relative;
   cursor: pointer;
   .Dropdown {
     display: none;
+    right: 0;
     position: absolute;
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
     padding: 12px 16px;
     z-index: 1;
   }
